# JudDesk

./: .gitignore  AGENTS.md  Banco  CLAUDE.md  Iniciar-JurisDesk.bat  README.md  REVISAO_PRODUCAO_2026-02-20.md  implementation_plan.md.resolved  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: review-implementing.md
docs/: README.md
docs/architecture/: proposta-sistema-juridico.md
docs/roadmap/: versao2.md
docs/ux/: qa-refino-interface-2026-02-16.md  relatorio-interface.md
scripts/: tauri-with-rust-env.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: activityLogger.test.ts  activityLogger.ts  ai.test.ts  ai.ts  attachmentCleanup.ts  autoBackup.test.ts  autoBackup.ts  costTracker.test.ts  costTracker.ts  db.test.ts  db.ts  documentCleanup.ts  documentStorage.ts  errorUtils.ts  extractionWorkerClient.ts  extractors.ts  globalSearch.test.ts  globalSearch.ts  intentClassifier.test.ts  intentClassifier.ts  notifications.test.ts  notifications.ts  pathSecurity.ts  pdf.test.ts  pdf.ts  secureSecrets.ts  securityConstants.ts  utils.test.ts  utils.ts
src/pages/: ActivityHistory.tsx  Assistant.tsx  Calendar.tsx  Clients.tsx  Dashboard.tsx  Documents.tsx  Settings.tsx
src/stores/: cascadeCleanup.test.ts  cascadeCleanup.ts  caseStore.test.ts  caseStore.ts  chatStore.test.ts  (+13 more)
tasks/: todo.md
video-remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
(+51 files in other folders)
